--- a/servicos.html
+++ b/servicos.html
@@ -141,7 +141,7 @@
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="fisioterapia" class="dropdown-item">Fisioterapia</a>
-                            <a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="massoterapia#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="massoterapia#relax" class="dropdown-item">Massagem Relaxante</a> <a href="massoterapia#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="massoterapia#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="massoterapia#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="massoterapia#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -189,7 +189,7 @@
                        
                         <p>Algumas técnicas:</p>
                         <ul>
-                            <li>Liberação Miofascial (Deep Tissue)</li>
+                            <li>Liberação Miofascial</li>
                             <li>Pompage</li>
                             <li>Tração</li>
                             <li>Massagem Sueca (Clássica)</li>
@@ -215,7 +215,7 @@
                     <img class="img-fluid w-100" src="img/libe.jpg" alt="">
                 </div>
                 <div class="col-lg-9">
-                    <h1 class="mb-4">Liberação Miofascial (Deep tissue)</h1>
+                    <h1 class="mb-4">Liberação Miofascial</h1>
                     <div class="pl-4 border-left border-primary">A massagem de Liberação Miofascial tem como principal intuito aliviar a tensão e restrição nos tecidos miofasciais do corpo humano. O termo "miofascial" refere-se aos músculos (mio) e à fáscia, que é o tecido conjuntivo que envolve, conecta e sustenta os músculos, ossos, órgãos e outras estruturas do corpo.<p>A técnica busca tratar pontos de tensão ou nódulos nos músculos e fáscia, que podem se formar devido a várias razões, como má postura, lesões, estresse, atividade física intensa, entre outros fatores. Esses pontos de tensão podem causar dor localizada, desconforto e restrição de movimento.<p>É importante ressaltar que a massagem de Liberação Miofascial não é apenas uma técnica de massagem comum, pois requer um conhecimento específico da anatomia e fisiologia dos músculos e da fáscia, bem como uma abordagem cuidadosa e personalizada para cada indivíduo, considerando suas necessidades e condições particulares.<p> Além de aliviar a dor e desconforto, a massagem de Liberação Miofascial pode melhorar a circulação sanguínea e linfática, aumentar a flexibilidade, promover o relaxamento muscular e, consequentemente, contribuir para uma maior amplitude de movimento e uma sensação geral de bem-estar físico. </p><p>Gostaria de mais informações? Entre em contato clicando no botão abaixo:</p>
                     <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Libera%C3%A7%C3%A3o%20Miofascial%20(Deep%20Tissue)." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
                        </div>
@@ -435,7 +435,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial (Deep Tissue)</a><a class="text-white-50 mb-2" href="#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial</a><a class="text-white-50 mb-2" href="#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
                                 <a class="text-white-50 mb-2" href="#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="massoterapia#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="massoterapia#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="massoterapia#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="massoterapia#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
