--- a/sobre.html
+++ b/sobre.html
@@ -123,7 +123,7 @@
                      <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="massoterapia#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="massoterapia#relax" class="dropdown-item">Massagem Relaxante</a> <a href="massoterapia#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="massoterapia#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="massoterapia#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="massoterapia#dl" class="dropdown-item">Drenagem Linfática</a>
