--- a/contato.html
+++ b/contato.html
@@ -136,7 +136,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Massoterapia</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="massoterapia#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="massoterapia#relax" class="dropdown-item">Massagem Relaxante</a> <a href="massoterapia#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="massoterapia#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="massoterapia#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="massoterapia#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -364,7 +364,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="massoterapia#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="massoterapia#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="massoterapia#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
+                                <a class="text-white-50 mb-2" href="massoterapia#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="massoterapia#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial </a><!-- <a class="text-white-50 mb-2" href="massoterapia#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="massoterapia#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="massoterapia#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="massoterapia#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="massoterapia#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="massoterapia#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="massoterapia#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
