--- a/preco.html
+++ b/preco.html
@@ -140,7 +140,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="massoterapia#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="massoterapia#dt" class="dropdown-item">Liberação Miofascial</a><!-- <a href="massoterapia#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="massoterapia#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="massoterapia#relax" class="dropdown-item">Massagem Relaxante</a> <a href="massoterapia#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="massoterapia#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="massoterapia#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="massoterapia#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -209,7 +209,7 @@
                     <img class="img-fluid w-100" src="img/libe.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Liberação Miofascial (Deep tissue)</h4>
+                    <h4 class="mb-4">Liberação Miofascial</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
@@ -394,7 +394,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="massoterapia#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="massoterapia#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="massoterapia#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
+                                <a class="text-white-50 mb-2" href="massoterapia#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="massoterapia#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial </a><!-- <a class="text-white-50 mb-2" href="massoterapia#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="massoterapia#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="massoterapia#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="massoterapia#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="massoterapia#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="massoterapia#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="massoterapia#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
