--- a/shell.html
+++ b/shell.html
@@ -109,7 +109,7 @@
           </a>
           
       </div>
-            <a href="index" class="navbar-brand ml-lg-3">
+            <a href="/" class="navbar-brand ml-lg-3">
                 <img alt="" src="img/f2.png" class="logo">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
