--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <!-- Pricing End -->
 
 
-    <!-- Team Start -->
+    <!-- Team Start 
     <div class="container-fluid py-5" style="padding-top: 0 !important;">
         <div class="container pt-5" >
             <div class="row justify-content-center text-center">
@@ -706,7 +706,7 @@
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.instagram.com/drwillsouto/" target="_blank"><i class="fab fa-instagram"></i></a>
-                               <!-- <a class="btn btn-outline-primary btn-square mr-2" href="https://twitter.com/drwillsouto" target="_blank"><i class="fab fa-twitter"></i></a>-->
+                               
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/drwillsouto"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                 
