--- a/tree.html
+++ b/tree.html
@@ -124,21 +124,8 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item" style="display: block;">
-          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, atendimentos domiciliares ou em clínica, confira alguns de nossos serviços:<br></p>
-            <ul><li>Fisioterapia</li>
-                <li>Tratamento da dor</li>
-                <li>Massagem para dor (Clínica)</li>
-                <li>Massagem Relaxante</li>
-                <li>Massagem Sueca(Clássica)</li>
-                <li>Liberação Miofascial(Deep Tissue)</li>
-                <li>Massagem para Dor de cabeça(Cefaleia - Enxaqueca)</li>
-                <li>Massagem para Disfunção Temporomandibular</li>
-                <li>Massagem Facial (Lifting Facial)</li>
-                <li>Drenagem Linfática</li>
-                <li>Massagem com Pedras Quentes</li>
-                <li>Ventosaterapia</li>
-                <li>Liberação Miofascial(Conceito ROLF)</li>
-            </ul>
+          <p>Atendimento humanizado, personalizado, com respeito e ética, focado em promover o alívio da Dor, bem-estar e qualidade de vida.<br>Disponibilizamos nossos tratamentos em clínica ou domiciliar.<br>Para saber mais acesse nosso site ou entre diretamente em contato pelo WhatsApp.</p>
+            
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
@@ -169,9 +156,9 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Contato</button>
         </a>
           
-          <a class="main_a_item" href="https://lattes.cnpq.br/2388059456660725" target="_blank" rel="nofollow">
+         <!-- <a class="main_a_item" href="https://lattes.cnpq.br/2388059456660725" target="_blank" rel="nofollow">
           <button class="main_button_item">Currículo Lattes</button>
-        </a>
+        </a>-->
       </section>
        <!-- <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
