--- a/tree.html
+++ b/tree.html
@@ -124,7 +124,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item" style="display: block;">
-          <p>Atendimento humanizado, personalizado, com respeito e ética, focado em promover o alívio da Dor, bem-estar e qualidade de vida.<br>Disponibilizamos nossos tratamentos em clínica ou domiciliar.<br>Para saber mais acesse nosso site ou entre diretamente em contato pelo WhatsApp.</p>
+          <p>Atendimento humanizado, personalizado, com respeito e ética, focado em promover o alívio da Dor, bem-estar e qualidade de vida.<br>Disponibilizamos nossos tratamentos em clínica ou domiciliar.<br>Para saber mais, acesse nosso site ou entre diretamente em contato pelo WhatsApp.</p>
             
         </div>
         <!-- Menu Small Item 
